@@ -1,3 +1,8 @@
+2014-04-11  Xavi Artigas  <xartigas@fluendo.com>
+
+	* src/gstttmlparse.c: (gst_ttmlparse_handle_event):
+	Fix caps nego in 1.0 when incoming buffers HAVE caps.
+
 2014-04-08  Xavi Artigas  <xartigas@fluendo.com>
 
 	* src/fluttml.c:
